# Port-Scanner-Detector

./: .gitignore  LICENSE  README.md  detector.py  pyproject.toml  scanner.py
.github/workflows/: ci.yml
examples/: alerts.json  cli_scan.json  connections.csv
port_scanner_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_detector.py  test_ports.py  test_targets.py
